(fix): remind popup getting cut off when opening inside the remind object - closes #4122

--- a/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
@@ -25,6 +25,7 @@
   ::ng-deep .m-dropdown--v2 .m-dropdown__list {
     right: unset;
     left: 0;
-    top: 10px;
+    top: unset;
+    bottom: 10px;
   }
 }
